get basic function works

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Etch-a-Sketch</title>
 	<!-- css reset / normalize stylesheet -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
 	<!-- my own css -->
-	<link rel="stylesheet" href="./index.css">
+	<link rel="stylesheet" href="./styles.css">
+	<script src="./script.js" defer></script>
 </head>
 <body>
-	
+	<div class="nav">
+		<button class="btn" id="reset">RESET</button>
+	</div>
+	<div class="container"></div>
 </body>
 </html>
