add size controller

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 </head>
 <body>
 	<div class="nav">
+        <div class="slider">
+            <label for="size">SIZE</label>
+            <input type="range" class="range" id="size" min=16 max=100>
+            <output id="sizeOutput"></output>
+        </div>
 		<button class="btn" id="reset">RESET</button>
 	</div>
 	<div class="container"></div>
