--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<title>Etch-a-Sketch</title>
 	<!-- css reset / normalize stylesheet -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
+	<!-- fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet"> 
 	<!-- my own css -->
 	<link rel="stylesheet" href="./styles.css">
 	<script src="./script.js" defer></script>
@@ -17,6 +21,9 @@
             <input type="range" class="range" id="size" min=16 max=100>
             <output id="sizeOutput"></output>
         </div>
+        <button class="btn" id="black">BLACK</button>
+        <button class="btn" id="rainbow">RAINBOW</button>
+        <button class="btn" id="erase">ERASE</button>
 		<button class="btn" id="reset">RESET</button>
 	</div>
 	<div class="container"></div>
